[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/bk.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 44.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Bk" type="Sprite" parent="."]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
color = Color( 0.81, 0.81, 0.81, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="DangerZone" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -51.0
margin_top = -11.0
margin_right = 153.0
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
bbcode_enabled = true
bbcode_text = "[center]Time: 0[/center]"
text = "Time: 0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Timer" parent="."]
autostart = true

[node name="Meter" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 13.0
color = Color( 0.227451, 1, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Life" to="." method="_on_Life_timeout"]
